user is able to update/edit pizza qty

--- a/app/scripts/pizzas/templates/pizza-order.html
+++ b/app/scripts/pizzas/templates/pizza-order.html
@@ -10,6 +10,10 @@
                 <h2>Pizza {{pizza.desc}}</h2>
                 <p>{{pizza.size}} {{pizza.dough}}</p>
             </div>
+            <div class="item item-avatar">
+                <qty ng-model="pizza"></qty>
+            </div>
+
             <div class="item item-body">
                 <p>
                 <div class="button-bar">
