--- a/app/scripts/empanadas/templates/menu-empanadas.html
+++ b/app/scripts/empanadas/templates/menu-empanadas.html
@@ -1,10 +1,10 @@
-<div class="item item-divider">
+<div class="item item-divider bar bar-positive ">
     Empanadas
 </div>
 
 <div class="list">
 
-  <div class="item item-divider" style="background-color: #f8f8ff" data-ng-repeat-start="cat in menu">
+  <div class="item item-divider bar bar-calm" data-ng-repeat-start="cat in menu">
     <strong>{{cat.desc}}</strong>
   </div>
 
