--- a/app/scripts/empanadas/templates/empanada-order.html
+++ b/app/scripts/empanadas/templates/empanada-order.html
@@ -37,7 +37,10 @@
 
 
           <div class="item item-body">
-              <div class="button-bar">
+              <div class="button-bar" data-ng-if="empanada.cartItemKey">
+                  <a class="button" data-ng-click="order.add(empanada)">Actualizar Mi Pedido</a>
+              </div>
+              <div class="button-bar" data-ng-if="!empanada.cartItemKey">
                   <a class="button" data-ng-click="order.add(empanada)">Agregar a Mi Pedido</a>
               </div>
 
