side menu by categories

--- a/app/scripts/pizzas/templates/menu-pizzas.html
+++ b/app/scripts/pizzas/templates/menu-pizzas.html
@@ -1,4 +1,4 @@
-<div class="item item-divider bar bar-positive ">
+<div class="item item-divider bar bar-positive " data-ng-if="menu">
     Pizzas
 </div>
 
