--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -19,6 +19,12 @@
         <ion-item nav-clear menu-close href="#/app/stores">
           Locales
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/menu/pizza">
+          Pizzas
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/menu/empanada">
+          Empanadas
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
