--- a/app/scripts/order/templates/delivery-option.html
+++ b/app/scripts/order/templates/delivery-option.html
@@ -6,14 +6,14 @@
     <ion-content>
       <div class="list">
         <label class="item item-radio">
-          <input type="radio" name="deliveryOption" data-ng-click="delivery.choose('D')">
+          <input type="radio" name="deliveryOption" data-ng-click="deliveryOption.choose('D')">
           <div class="item-content">
             Delivery
           </div>
           <i class="radio-icon ion-checkmark"></i>
         </label>
         <label class="item item-radio">
-          <input type="radio" name="deliveryOption" data-ng-click="delivery.choose('R')">
+          <input type="radio" name="deliveryOption" data-ng-click="deliveryOption.choose('R')">
           <div class="item-content">
             Retira en Local
           </div>
