--- a/app/templates/confo.html
+++ b/app/templates/confo.html
@@ -11,15 +11,15 @@
       </div>
 
       <div class="item">
-        Numero de condfirmacion: {{ order.number }}
+        Numero de condfirmacion: {{ response.response.ordenNumber }}
         <br/>
-        Total: {{ order.total }}
+        Total: {{ response.response.total }}
       </div>
 
       <div class="item">
-        Nombre: {{ order.contact.name }}
+        Nombre: {{ response.response.contact.name }}
         </br>
-        Tel: {{ order.contact.tel }}
+        Tel: {{ response.response.contact.tel }}
       </div>
     </div>
 
