--- a/app/scripts/pizzas/templates/pizza-dough.html
+++ b/app/scripts/pizzas/templates/pizza-dough.html
@@ -5,14 +5,14 @@
     <ion-content>
         <div class="list">
             <label class="item item-radio">
-                <input type="radio" value="al molde" data-ng-click="dough.choose('al molde')" data-ng-model="pizza.dough">
+                <input type="radio" value="molde" data-ng-click="dough.choose('al molde')" data-ng-model="pizza.dough">
                 <div class="item-content">
                     Al Molde  -  {{ pizza.totalPrice + pizza.price.dough['al molde'] | centsToMoney | currency}}
                 </div>
                 <i class="radio-icon ion-checkmark"></i>
             </label>
             <label class="item item-radio">
-                <input type="radio" value="a la piedra" data-ng-click="dough.choose('a la piedra')" data-ng-model="pizza.dough">
+                <input type="radio" value="piedra" data-ng-click="dough.choose('a la piedra')" data-ng-model="pizza.dough">
                 <div class="item-content">
                     A la Piedra  -  {{ pizza.totalPrice + pizza.price.dough['a la piedra'] | centsToMoney | currency}}
                 </div>
