PROMOS - Refactor and modal to choose from menu

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -17,6 +17,8 @@
 
       <empanadas bindonce data-ng-model="menu.empanada"></empanadas>
 
+      <promotions bindonce data-ng-model="menu.promotion"></promotions>
+
     </ion-content>
 
 </ion-view>
