--- a/app/scripts/promotion/templates/details.html
+++ b/app/scripts/promotion/templates/details.html
@@ -1,7 +1,7 @@
 <div class="modal">
 
   <ion-header-bar>
-    <h1 class="title">Promo {{promotion.desc}} </h1>
+    <h1 class="title" data-bo-bind="promotion.desc"></h1>
   </ion-header-bar>
 
   <ion-content>
@@ -9,6 +9,12 @@
 
 
     <div class="item item-body">
+
+      <div class="item item-text-wrap" data-bo-bind="promotion.details"></div>
+
+      <div class="item item-text-wrap" data-bo-bind="promotion.price | centsToMoney | currency"></div>
+
+
       <div class="button-bar">
         <a class="button" data-ng-click="details.select()">Seleccionar</a>
       </div>
