--- a/app/scripts/order/templates/promos-option.html
+++ b/app/scripts/order/templates/promos-option.html
@@ -1,24 +1,24 @@
-<div class="modal">
-  <ion-header-bar>
-    <h1 class="title">Poductos Seleccionados</h1>
-  </ion-header-bar>
+<!--<div class="modal">-->
+  <!--<ion-header-bar>-->
+    <!--<h1 class="title">Poductos Seleccionados</h1>-->
+  <!--</ion-header-bar>-->
 
 
-  <ion-list>
+  <!--<ion-list>-->
 
-    <ion-item bindonce data-ng-repeat="product in cart">
-      <h3 data-bo-bind="product.description()"></h3>
-      <span data-bo-bind="product.toppings"></span>
-      <span data-bo-bind="product.price.base | centsToMoney | currency"></span>
-    </ion-item>
+    <!--<ion-item bindonce data-ng-repeat="product in cart">-->
+      <!--<h3 data-bo-bind="product.description()"></h3>-->
+      <!--<span data-bo-bind="product.toppings"></span>-->
+      <!--<span data-bo-bind="product.price.base | centsToMoney | currency"></span>-->
+    <!--</ion-item>-->
 
 
-    <button class="button button-block button-positive"
-            data-ng-click="promos.applyPromos(cart)">Aplicar Promos</button>
+    <!--<button class="button button-block button-positive"-->
+            <!--data-ng-click="promos.applyPromos(cart)">Aplicar Promos</button>-->
 
-    Resultado de aplicar promos: {{ isPromoValid }}
+    <!--Resultado de aplicar promos: {{ isPromoValid }}-->
 
-    <button class="button button-block button-positive"
-            data-ng-click="promos.continue()">Continuar</button>
+    <!--<button class="button button-block button-positive"-->
+            <!--data-ng-click="promos.continue()">Continuar</button>-->
 
-  </ion-list>
+  <!--</ion-list>-->
