--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -2,7 +2,7 @@
 
   <ion-pane ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
-      <!--<ion-nav-back-button class="button-clear"><i class="icon ion-chevron-left"></i> Back</ion-nav-back-button>-->
+      <ion-nav-back-button class="button-clear"><i class="icon ion-chevron-left"></i></ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view name="navContent" animation="slide-left-right"></ion-nav-view>
   </ion-pane>
@@ -31,10 +31,7 @@
 
   <!-- Right menu -->
   <ion-side-menu side="right">
-
       <cart></cart>
-
-
   </ion-side-menu>
   <!-- Right menu -->
 
