--- a/app/scripts/cart/templates/cart.html
+++ b/app/scripts/cart/templates/cart.html
@@ -3,8 +3,7 @@
         <button
                 class="button button-icon icon ion-minus-circled"
                 data-ng-show="cart.products.length > 0"
-                data-ng-click="showDelete = !showDelete; showEdit = false"
-                data-test-cart-button-remove>
+                data-ng-click="showDelete = !showDelete; showEdit = false">
         </button>
     </div>
 
@@ -17,8 +16,7 @@
         <button
                 class="button"
                 data-ng-show="cart.products.length > 0"
-                data-ng-click="showEdit = !showEdit; showDelete = false"
-                data-test-cart-button-edit>
+                data-ng-click="showEdit = !showEdit; showDelete = false">
           Editar
         </button>
     </div>
