--- a/app/scripts/promotion/templates/details.html
+++ b/app/scripts/promotion/templates/details.html
@@ -1,14 +1,14 @@
 <div class="modal">
 
   <ion-header-bar>
-    <h1 class="title" data-bo-bind="promotion.desc"></h1>
+    <h1 class="title" bindonce data-bo-bind="promotion.desc"></h1>
   </ion-header-bar>
 
   <ion-content>
 
 
 
-    <div class="item item-body">
+    <div class="item item-body" bindonce>
 
       <div class="item item-text-wrap" data-bo-bind="promotion.details"></div>
 
