PROMOS - Add menu option on the left view

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -17,7 +17,7 @@
 
       <empanadas bindonce data-ng-model="menu.empanada"></empanadas>
 
-      <promotions bindonce data-ng-model="menu.promotion"></promotions>
+      <promotions bindonce data-ng-model="menu.promo"></promotions>
 
     </ion-content>
 
