--- a/app/scripts/cart/templates/cart.html
+++ b/app/scripts/cart/templates/cart.html
@@ -29,6 +29,11 @@
         </div>
     </div>
 
+
+    <ion-item data-ng-if="cart.promotions.length > 0" data-ng-repeat="promo in cart.promotions">
+      {{ promo.desc }
+    </ion-item>
+
     <ion-list show-delete="showDelete">
         <ion-item nav-clear data-ng-repeat="item in cart.products | orderBy:'+cat'">
           <div style="white-space: normal">{{item.cat}} {{item.description()}} - Cant. {{item.qty}}</div>
